# motorola-6800-assembler

./: .clang-format  .editorconfig  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  as.c  as.cpp  as.h  config.h.in  do.h  do0.c  do0.cpp  do1.c  do1.cpp  do11.c  do11.cpp  do4.c  do4.cpp  do5.c  do5.cpp  do9.c  do9.cpp  eval.c  eval.cpp  eval.h  ffwd.c  ffwd.cpp  ffwd.h  globals.c  globals.cpp  globals.h  output.cpp  output.h  pseudo.c  pseudo.cpp  pseudo.h  symtab.c  symtab.cpp  symtab.h  table.h  table0.cpp  table1.c  table1.cpp  table11.c  (+9 more)
test/: CMakeLists.txt  all_6805_opcodes_by_name.asm  all_6805_opcodes_by_value.asm  cbug05.asm
